# Auth-Service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
nginx/: nginx.conf
nginx/conf.d/: default.conf
src/: .env.example  Dockerfile  alembic.ini  main.py
src/api/v1/: access.py  auth.py  personal.py  roles.py
src/core/: config.py  exceptions.py
src/db/: postgres.py  prepare_db.py
src/db/postgres/: postgres.py  session_handler.py  storage.py
src/db/redis/: cache_storage.py  redis.py  redis_storage.py
src/migrations/: env.py
src/migrations/versions/: 40380ebf41ac_initial_create_tables.py  a14b4ce11b01_.py
src/models/: fingerprint.py  role.py  token.py  user.py  user_role.py
src/schemas/: access.py  fingerprint.py  mixins.py  role.py  token.py  user.py
src/services/: access_service.py  auth_service.py  role_service.py  token_service.py  user_service.py
src/util/: JWT_helper.py  hash_helper.py
tests/func/: .env.example  conftest.py  docker-compose.yml  pyproject.toml  settings.py
tests/func/fixtures/: jwt_fixt.py  postgres_fixt.py  redis_fixt.py  startup_fixt.py
tests/func/src/: test_auth.py  test_profile.py  test_register.py  test_roles.py
tests/func/testdata/: auth.py  common.py  db_schema.py  personal.py  roles.py
tests/func/util/: token_helpers.py
