[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = ""
authors = ["bbaranov"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.29"
pydantic-settings = "^2.2.1"
werkzeug = "^3.0.2"
ruff = "^0.3.7"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
